# products-project

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 211fc3d3deea_add.py  b834e46b8fb5_add.py
app/routes/: category_routes.py  product_routes.py
app/schemas/: base.py  category.py  product.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/shemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_product_user_cases.py
app/use_cases/: category.py  product.py
