[tool.poetry]
name = "project02"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo <carloseduardovieiradesouza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.0"
alembic = "^1.11.3"
python-decouple = "^3.8"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
